feat: Add complete automation system with auto-reorder, weekly reports, price sync, and Helium10 integration

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.17.3",
     "firebase": "^12.8.0",
+    "googleapis": "^171.2.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "qrcode": "^1.5.4",
