--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "NextGate",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "aws4": "^1.13.2",
+    "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -24,6 +27,7 @@
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.17.3",
     "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.1",
     "googleapis": "^171.2.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
