--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "qrcode": "^1.5.4",
+    "resend": "^6.9.2",
     "speakeasy": "^2.0.0",
     "stripe": "^20.3.0",
     "uuid": "^9.0.1",
