--- a/.github/workflows/daily-blog.yml
+++ b/.github/workflows/daily-blog.yml
@@ -2,8 +2,8 @@ name: Daily Blog Automation
 
 on:
   schedule:
-    # Runs at 00:00 UTC every day
-    - cron: '0 0 * * *'
+    # Runs at 00:00 UTC on Mon, Wed, Fri
+    - cron: '0 0 * * 1,3,5'
   workflow_dispatch: # Allows manual triggering from GitHub UI
 
 permissions:
